...
        Box(
            Modifier
                .fillMaxWidth()
                .height(48.dp),
            contentAlignment = Alignment.Center
        ) {
            Text("Log Weight")
        }
    }
}

@Preview
@Composable
...
