...
    plan: WorkoutPlan?,
    onAction: (EditPlanAction) -> Unit,
    onNavigateBack: () -> Unit,
) {
    Scaffold(
        Modifier.fillMaxSize(),
        topBar = { BybonTopAppBar("Edit plan", onNavigateBack) },
    ) { contentPadding ->
        plan?.let { currentPlan ->
            LazyColumn(
                Modifier
                    .padding(contentPadding)
                    .padding(horizontal = 16.dp, vertical = 24.dp)
...
                item(key = "archive") {
                    Box(
                        Modifier.fillMaxWidth(),
                        contentAlignment = Alignment.Center,
                    ) {
                        TextButton({ onAction(EditPlanAction.OnArchivePlan) }) {
                            Text("Archive Plan")
                        }
                    }
                }
            }
        }
    }
...
