<resources>
    <string name="app_name">Bybon</string>
</resources>