appId: dev.sanastasov.bybon.debug
---
- launchApp:
    clearState: true
- assertVisible: "Bybon"
- assertVisible: "Full Body A"
- assertVisible: "Full Body B"
- tapOn: "More options for Full Body B"
- tapOn: "Archive Plan"
- assertNotVisible: "Full Body B"
- assertVisible: "Full Body A"
- launchApp:
    clearState: true
- assertVisible: "Full Body A"
- assertVisible: "Full Body B"
- tapOn: "More options for Full Body B"
- tapOn: "Edit Plan"
- assertVisible: "Edit plan"
- tapOn: "Archive Plan"
- assertVisible: "Bybon"
- assertNotVisible: "Full Body B"
- assertVisible: "Full Body A"
