appId: dev.sanastasov.bybon.debug
---
- launchApp:
    clearState: true
- assertVisible: "Bybon"
- assertVisible: "Full Body A"
- assertNotVisible: "Upper Body A"
- assertNotVisible: "My Plans"
- scrollUntilVisible:
    element: "Show Archived Plans"
    direction: DOWN
- tapOn: "Show Archived Plans"
- assertVisible: "My Plans"
- assertNotVisible: "Show Archived Plans"
- scrollUntilVisible:
    element: "Unarchive"
    direction: DOWN
- assertVisible: "Archived Plans"
- assertVisible: "Upper Body A"
- assertVisible:
    text: "Archived"
    below: "Upper Body A"
- assertVisible: "Hide Archived Plans"
- tapOn: "Unarchive"
- assertVisible: "Hide Archived Plans"
- assertNotVisible: "Archived Plans"
- scrollUntilVisible:
    element: "Upper Body A"
    direction: UP
- assertVisible: "Upper Body A"
